--- a/facebook.html
+++ b/facebook.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Instagram</title>
+    <title>Facebook</title>
     <link rel="stylesheet" href="estilo/social.css">
 </head>
 <body>
-    <img src="imagens/tela-instagram.jpg" alt="Instagram">
-    <a href="https://www.instagram.com/elvisgzx/" target="_blank">ACESSE</a>
+    <img src="imagens/tela-facebook.jpg" alt="Facebook">
+    <a href="https://www.facebook.com/elvis.lima.1415/" target="_blank">ACESSE</a>
 </body>
 </html>
